--- a/example/index.html
+++ b/example/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <!-- <script src="src/index.js"></script> -->
-  <script src="dist/brief.js"></script>
+  <script src="/js/brief.js"></script>
   <script>
     /* eslint-disable no-console */
     const {tags, component, render} = briefjs;
